--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
     "bootstrap": "^5.3.8",
+    "datatables.net": "^2.3.4",
+    "datatables.net-bs5": "^2.3.4",
+    "datatables.net-responsive-bs5": "^3.0.7",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
