--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.552.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.0",
