creation of new role owner adding functionality for that and now move forward for the payment system

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@supabase/supabase-js": "^2.78.0",
     "bootstrap": "^5.3.8",
     "datatables.net": "^2.3.4",
-    "datatables.net-bs5": "^2.3.4",
     "datatables.net-responsive-bs5": "^3.0.7",
-    "jquery": "^3.7.1",
     "lucide-react": "^0.552.0",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.5",
     "sweetalert2": "^11.26.3"
